// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render when authenticated 1`] = `
<div
  className="root"
>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      OLIVIA
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className={undefined}
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="profileMale"
        />
      }
      linkUrl="http://seekasia.comundefined"
    >
      Header Profile Title
    </MenuItem>
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className={undefined}
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="jobInvitation"
        />
      }
      linkUrl="http://seekasia.comundefined"
    >
      Header Invitation Title
    </MenuItem>
  </div>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className={undefined}
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="menuBody"
  >
    <MenuItem
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      className="loginSignup"
    >
      Header Logout Title
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Get back!
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render when unauthenticated 1`] = `
Object {
  "authenticationStatus": "unauthenticated",
  "baseUrl": "http://seekasia.com",
  "brandStyles": Object {
    "employerLink": "employerLink",
  },
  "linkUrl": "/test",
  "locales": Array [
    Object {
      "ItemIcon": [Function],
      "country": "hk",
      "language": "en",
      "title": "Hong Kong (English)",
      "url": "https://hk.jobsdb.com/hk",
    },
    Object {
      "ItemIcon": [Function],
      "country": "id",
      "language": "en",
      "title": "Indonesia (English)",
      "url": "https://id.jobsdb.com/id",
    },
  ],
  "messages": Object {
    "header.employerSiteTitle": "Awesome employers click here",
    "header.employerSiteUrl": "http://brand.seekasia.com",
    "header.invitationTitle": "Header Invitation Title",
    "header.loginTitle": "Header Login Title",
    "header.loginUrl": "/hk/en/login/jobseekerlogin",
    "header.logoutTitle": "Header Logout Title",
    "header.profileTitle": "Header Profile Title",
    "header.signupTitle": "Header Signup Title",
    "header.signupUrl": "/hk/en/jobseeker/registration",
    "menu.backToMenu": "Get back!",
    "menu.countryAndLanguage": "Country & Language",
    "menu.jobSeekerHeader": "JOB SEEKER",
    "menu.more": "More",
    "menu.moreHeader": "MORE",
    "menu.settingsHeader": "SETTINGS",
  },
  "userName": "Olivia",
}
`;

exports[`Menu should render with default props 1`] = `
<div
  className="root"
>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className={undefined}
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Get back!
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with links list 1`] = `
<div
  className="root"
>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="0"
      linkUrl="http://seekasia.com/home"
    >
      Home
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="http://seekasia.com/myPortal"
    >
      MyPortal
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="2"
      linkUrl="http://seekasia.com/resources"
    >
      Resources
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="3"
      linkUrl="http://seekasia.com/career-insights"
    >
      CareerInsights
    </MenuItem>
  </div>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className={undefined}
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Get back!
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with menu open 1`] = `
<div
  className="root showMenu"
>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className={undefined}
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Get back!
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with more links 1`] = `
<div
  className="root"
>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="0"
      linkUrl="http://seekasia.com/home"
    >
      Home
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="http://seekasia.com/myPortal"
    >
      MyPortal
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="2"
      linkUrl="http://seekasia.com/resources"
    >
      Resources
    </MenuItem>
    <MenuItem
      ItemIcon={[Function]}
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="3"
      linkUrl="http://seekasia.com/career-insights"
    >
      CareerInsights
    </MenuItem>
  </div>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className={undefined}
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Get back!
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;

exports[`Menu should render with sub links 1`] = `
<div
  className="root"
>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
       
      JOB SEEKER
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <div>
      <MenuItem
        ItemIcon={[Function]}
        brandStyles={
          Object {
            "employerLink": "employerLink",
          }
        }
        handleClick={[Function]}
      >
        Title
      </MenuItem>
      <div
        className="subMenu"
      >
        <MenuItem
          ItemIcon={
            <Icon
              animation=""
              className="backLink"
              lineHeight="loud"
              rotation="-90deg"
              size="small"
              smoothRotate={false}
              type="chevron"
            />
          }
          className="backLink"
          handleClick={[Function]}
        >
          Get back!
        </MenuItem>
        <MenuItem
          ItemIcon={[Function]}
          brandStyles={
            Object {
              "employerLink": "employerLink",
            }
          }
          className="subItem"
          key="0"
          linkUrl="http://seekasia.com/home"
        >
          Home
        </MenuItem>
        <MenuItem
          ItemIcon={[Function]}
          brandStyles={
            Object {
              "employerLink": "employerLink",
            }
          }
          className="subItem"
          key="1"
          linkUrl="http://seekasia.com/myPortal"
        >
          MyPortal
        </MenuItem>
        <MenuItem
          ItemIcon={[Function]}
          brandStyles={
            Object {
              "employerLink": "employerLink",
            }
          }
          className="subItem"
          key="2"
          linkUrl="http://seekasia.com/resources"
        >
          Resources
        </MenuItem>
        <MenuItem
          ItemIcon={[Function]}
          brandStyles={
            Object {
              "employerLink": "employerLink",
            }
          }
          className="subItem"
          key="3"
          linkUrl="http://seekasia.com/career-insights"
        >
          CareerInsights
        </MenuItem>
      </div>
    </div>
  </div>
  <Section
    className="headerMenu"
    header={false}
    pullout={false}
    slim={false}
  >
    <Text
      baseline={true}
      whisperingTitle={true}
    >
      SETTINGS
    </Text>
  </Section>
  <div
    className="menuBody"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className={undefined}
          lineHeight="conversational"
          rotation=""
          size="small"
          smoothRotate={false}
          type="country"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      handleClick={[Function]}
      title="Country & Language"
    >
      Hong Kong (English)
    </MenuItem>
  </div>
  <div
    className="subMenu"
  >
    <MenuItem
      ItemIcon={
        <Icon
          animation=""
          className="backLink"
          lineHeight="loud"
          rotation="-90deg"
          size="small"
          smoothRotate={false}
          type="chevron"
        />
      }
      className="backLink"
      handleClick={[Function]}
    >
      Get back!
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      descriptionProps={
        Object {
          "className": "selectedLocale",
          "strong": true,
        }
      }
    >
      Hong Kong (English)
    </MenuItem>
    <MenuItem
      ItemIcon={
        <FakeIcon
          className="flag"
        />
      }
      brandStyles={
        Object {
          "employerLink": "employerLink",
        }
      }
      key="1"
      linkUrl="https://id.jobsdb.com/id"
    >
      Indonesia (English)
    </MenuItem>
  </div>
</div>
`;
